--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/cuongboi/create-dev-lib.git"
   },
   "scripts": {
-    "release": "npm publish --access public"
+    "release": "npm version patch && git push origin main --tags && npm publish --access public"
   },
   "type": "module",
   "bin": {
