--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/cuongboi/create-dev-lib.git"
   },
+  "scripts": {
+    "release": "npm version patch && git push origin main --tags && npm publish --access public"
+  },
   "type": "module",
   "bin": {
     "create-dev-lib": "index.js"
